k8s-manifests/url-shortener/app-deployment.yml
# 2 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorter-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shorter
  template:
    metadata:
      labels:
        app: shorter
    spec:
      containers:
        - name: shorter
          image: alihajizadeh/go-shorter:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
            limits:
              memory: "50Mi"
              cpu: "100m"

---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: shorter-service
spec:
  selector:
    app: shorter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
# 3. Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shorter-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "shorter.46.34.163.151.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shorter-service
                port:
                  number: 80
  tls:
    - hosts:
        - "shorter.46.34.163.151.nip.io"
      secretName: backend-tls-secret
