k8s-manifests/url-shortener/frontend-deployment.yml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shorter-frontend
  template:
    metadata:
      labels:
        app: shorter-frontend 
    spec:
      containers:
        - name: frontend
          image: YOUR_DOCKERHUB_USER/react-shortener:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: shorter-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# 3. Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: "46.34.163.151.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - "46.34.163.151.nip.io"
      secretName: frontend-tls-secret
